Create Project finishing touches